increase timeout to 30 mins

--- a/cloudbuild-tag.yaml
+++ b/cloudbuild-tag.yaml
@@ -7,7 +7,9 @@ steps:
   - |
     ./docker.sh
   id: 'train_writer'
-  timeout: 1800s
+
+# 30 mins
+timeout: 1800s
 
 # args: ['app', 'deploy', '--project=$PROJECT_ID', '--version=$SHORT_SHA']
 
