--- a/cloudbuild-tag.yaml
+++ b/cloudbuild-tag.yaml
@@ -1,12 +1,34 @@
 steps:
 
-- name: 'gcr.io/$PROJECT_ID/writer:commit-$SHORT_SHA'
+- name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
   args:
   - '-c'
   - |
-    ./run-cloud.sh
-  id: 'train_and_deploy_writer'
+    docker pull gcr.io/$PROJECT_ID/writer:branch-$BRANCH_NAME \
+    || docker pull gcr.io/$PROJECT_ID/writer:branch-master \
+    || true
+  id: 'pull_writer'
 
-# 2 hours
-timeout: 7200s
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    [
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/writer:$TAG_NAME',
+      '-f', 'Dockerfile',
+      '.',
+    ]
+  id: 'build_writer'
+  waitFor: ['pull_writer']
+
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    docker push gcr.io/$PROJECT_ID/writer:$TAG_NAME
+  id: 'push_writer'
+  waitFor: ['build_writer']
+
+# 30 mins
+timeout: 1800s
