--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -8,11 +8,12 @@ spec:
       name: writer
     spec:
       containers:
-      - image: gcr.io/writer-01/writer:v1.2.2
-        env:
-        - name: name
-          value: value
-        name: writer
+      - name: writer
+        image: gcr.io/writer-01/writer:v1.2.3
+        volumeMounts:
+        - name: secrets
+          mountPath: "/secrets"
+          readOnly: true
       volumes:
       - name: secrets
         secret:
