correct branch name master --> main in cloudbuild files

--- a/cloudbuild-tag.yaml
+++ b/cloudbuild-tag.yaml
@@ -5,7 +5,7 @@ steps:
   args:
   - '-c'
   - |
-    docker pull gcr.io/$PROJECT_ID/writer:branch-master \
+    docker pull gcr.io/$PROJECT_ID/writer:branch-main \
     || true
   id: 'pull_writer'
 
